# dunno

agent-builder-agent-main/: README.md  app-wm.db  db.db  logs.db  notes.md  pyproject.toml
agent-builder-agent-main/core/framework/: __init__.py  base.py
agent-builder-agent-main/core/units/: __init__.py  files_tool.py  run_session.py  terminal_tool.py  working_memory.py
agent-builder-agent-main/core/utils/: agent_base.py  file_utils.py  llm.py  message_thread_manager.py  workspace_utils.py
agent-builder-agent-main/core/workspace/: README.md
agent-builder-agent-main/working_directory/: app-wm.db  llm.py  main.py
