[tool.poetry]
name = "kortix"
version = "0.1.0"
description = ""
authors = ["Ashher Ali <ashher868@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "*"
litellm = "*"
loguru = "*"
fastapi = "*"
docker = "*"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
